--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,11 @@
 	<distributionManagement>
 		<snapshotRepository>
 		<id>nexus</id>
-		<url>http://localhost:8081/repository/maven-snapshots/</url>
+		<url>http://192.168.100.170:8081/repository/maven-releases/</url>
 		</snapshotRepository>
 		<repository>
 		<id>nexus</id>
-		<url>http://localhost:8081/repository/maven-releases/</url>
+		<url>http://192.168.100.170:8081/repository/maven-releases/</url>
 		</repository>
 	</distributionManagement>
 
