--- a/JenkinsFile
+++ b/JenkinsFile
@@ -34,6 +34,11 @@ pipeline {
 				echo "mvn deploy"
 			}				
 		}
+		stage("Deploy With Nexus") {
+            steps {
+                sh "mvn clean package deploy:deploy-file -DgroupId=tn.spring -DartifactId=achat -Dversion=1.0 -DgeneratePom=true -Dpackaging=jar -DrepositoryId=deploymentRepo -Durl=http://localhost:8081/repository/maven-releases/ -Dfile=target/achat-1.0.war"
+            }
+       }
        
     }    
    
