--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.esprit.rh</groupId>
 	<artifactId>achat</artifactId>
-	<version>1.0</version>
+	<version>1.0-SNAPSHOT</version>
 	<name>achat</name>
 	<description>Projet pour le module DevOps</description>
 	<properties>
@@ -78,14 +78,11 @@
 		</plugins>
 	</build>
 	<distributionManagement>
-		<snapshotRepository>
-		<id>nexus</id>
-		<url>http://192.168.100.170:8081/repository/maven-releases/</url>
-		</snapshotRepository>
-		<repository>
-		<id>nexus</id>
-		<url>http://192.168.100.170:8081/repository/maven-releases/</url>
-		</repository>
+	<repository>
+	<id>deploymentRepo</id>
+	<name>NexusRepository</name>
+	<url>http://192.168.100.170:8081/repository/maven-snapshots/</ur1>
+	</repository>
 	</distributionManagement>
 
 </project>
