--- a/JenkinsFile
+++ b/JenkinsFile
@@ -31,7 +31,7 @@ pipeline {
         }
         stage('Deploy'){
 			steps{
-				echo "mvn deploy"
+				sh "mvn deploy"
 			}				
 		}
 		stage("Deploy With Nexus") {
