--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,14 @@
 
 	</dependencies>
 	<distributionManagement>
+		<snapshotRepository>
+			<id>deploymentRepo</id>
+			<name>NexusRepository</name>
+			<url>http://localhost:8081/repository/maven-snapshots/</url>
+		</snapshotRepository>
 		<repository>
-		<id>deploymentRepo</id>
-		<name>NexusRepository</name>
-		<url>http://192.168.1.25:8081/repository/maven-snapshots/</url>
+			<id>deploymentRepo</id>
+			<url>http://localhost:8081/repository/maven-releases/</url>
 		</repository>
 	</distributionManagement>
 	<build>
