--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.esprit.rh</groupId>
 	<artifactId>achat</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<name>achat</name>
 	<description>Projet pour le module DevOps</description>
 	<properties>
@@ -60,7 +60,7 @@
 	<repository>
 	<id>deploymentRepo</id>
 	<name>NexusRepository</name>
-	<url>http://192.168.100.170:8081/repository/maven-snapshots/</url>
+	<url>http://localhost:8081/repository/maven-snapshots/</url>
 	</repository>
 	</distributionManagement>
 
