--- a/JenkinsFile
+++ b/JenkinsFile
@@ -34,7 +34,7 @@ pipeline {
 				sh 'mvn deploy'
 			}				
 		}
-		stage("Deploy With Nexus")s {
+		stage("Deploy With Nexus") {
             steps {
                 sh 'mvn clean package deploy:deploy-file -DgroupId=tn.spring -DartifactId=achat -Dversion=1.0 -DgeneratePom=true -Dpackaging=jar -DrepositoryId=deploymentRepo -Durl=http://localhost:8081/repository/maven-releases/ -Dfile=target/achat-1.0.war'
             }
