--- a/pom.xml
+++ b/pom.xml
@@ -53,24 +53,29 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>3.0.0</version>
 		</dependency>
-
 	</dependencies>
-
+    <distributionManagement>
+   <repository>
+      <id>deployementRepo</id>
+      <name>Nexus Repository</name>
+     <url>http://192.168.1.14:8081/repository/maven-releases/</url>
+   </repository>
+   </distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
+				
 			</plugin>
-		</plugins>
+	<plugin>
+
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
+			</plugin>
+
+    	</plugins>
 	</build>
 
 </project>
