--- a/pom.xml
+++ b/pom.xml
@@ -89,13 +89,13 @@
 
 	</dependencies>
 	
-	<distributionManagement>
-	<repository>
-	<id>deploymentRepo</id>
-	<name>NexusRepository</name>
-	<url>http://localhost:8081/repository/maven-snapshots/</url>
-	</repository>
-	</distributionManagement>
+	 <distributionManagement>
+   <repository>
+      <id>deployementRepo</id>
+      <name>Nexus Repository</name>
+     <url>http://192.168.1.14:8081/repository/maven-releases/</url>
+   </repository>
+   </distributionManagement>
 
 	<build>
 		<plugins>
