--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.esprit.rh</groupId>
 	<artifactId>achat</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<name>achat</name>
 	<description>Projet pour le module DevOps</description>
 	<properties>
@@ -88,13 +88,21 @@
 		
 
 	</dependencies>
-	
+
 	<distributionManagement>
-	<repository>
-	<id>deploymentRepo</id>
-	<name>NexusRepository</name>
-	<url>http://localhost:8081/repository/maven-snapshots/</url>
-	</repository>
+		<snapshotRepository>
+			<id>deploymentRepo</id>
+			<name>NexusRepository</name>
+			<url>http://localhost:8081/repository/maven-snapshots/</url>
+		</snapshotRepository>
+
+		<repository>
+			<id>deploymentRepo</id>
+			<name>NexusRepository</name>
+			<url>http://localhost:8081/repository/maven-releases/</url>
+		</repository>
+
+
 	</distributionManagement>
 
 	<build>
