--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
+			  <version>5.8.1</version>
 
 		</dependency>
 		<dependency>
