--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
    <repository>
       <id>deployementRepo</id>
       <name>Nexus Repository</name>
-     <url>http://192.168.1.14:8081/repository/maven-releases/</url>
+     <url>http://localhost:8081/repository/maven-releases/</url>
    </repository>
    </distributionManagement>
 	<build>
