--- a/pom.xml
+++ b/pom.xml
@@ -53,34 +53,36 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>3.0.0</version>
 		</dependency>
-		 <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-        </dependency>
+
 	</dependencies>
-    <distributionManagement>
-   <repository>
-      <id>deployementRepo</id>
-      <name>Nexus Repository</name>
-     <url>http://localhost:8081/repository/maven-releases/</url>
-   </repository>
-   </distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
-	<plugin>
-
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.1.0</version>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-resources-plugin</artifactId>
+			     <version>3.1.0</version>
 			</plugin>
-
-    	</plugins>
+		</plugins>
 	</build>
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>Nexus repository</name>
+			<url>http://localhost:8081/repository/maven-releases</url>
+		</repository>
+	</distributionManagement>
 
 </project>
