--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.esprit.rh</groupId>
 	<artifactId>achat</artifactId>
-	<version>1.1.3</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<name>achat</name>
 	<description>Projet pour le module DevOps</description>
 	<properties>
@@ -18,10 +18,12 @@
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 	<dependencies>
-	    <dependency>
+	
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -30,10 +32,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -44,6 +48,7 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -55,6 +60,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
 		<dependency>
 		    <groupId>log4j</groupId>
 		    <artifactId>log4j</artifactId>
@@ -66,6 +72,9 @@
 		    <artifactId>junit</artifactId>
 		    <scope>test</scope>
 		</dependency>
+		
+
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-boot-starter</artifactId>
@@ -76,20 +85,18 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		
 
 	</dependencies>
+	
 	<distributionManagement>
-		<snapshotRepository>
-			<id>deploymentRepo</id>
-			<name>NexusRepository</name>
-			<url>http://localhost:8081/repository/maven-snapshots/</url>
-		</snapshotRepository>
-		<repository>
-			<id>deploymentRepo</id>
-			<name>NexusRepository</name>
-			<url>http://localhost:8081/repository/maven-releases/</url>
-		</repository>
+	<repository>
+	<id>deploymentRepo</id>
+	<name>NexusRepository</name>
+	<url>http://localhost:8081/repository/maven-snapshots/</url>
+	</repository>
 	</distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -119,6 +126,7 @@
 			        </includes>
 			    </configuration>
 			</plugin>
+			
 		</plugins>
 	</build>
 	
