--- a/pom.xml
+++ b/pom.xml
@@ -114,20 +114,22 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-resources-plugin</artifactId>
-			     <version>3.1.0</version>
-			</plugin>
-			<plugin>
+<plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>2.19.1</version>
-    <configuration>
-        <includes>
-            <include>**/*Test.java</include>
-        </includes>
-    </configuration>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+    </dependencies>
 </plugin>
 		</plugins>
 	</build>
