--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,7 @@
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 		
-    <!-- JaCoCo Properties -->
-    <jacoco.version>0.8.6</jacoco.version>
-    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-    <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-    <sonar.language>java</sonar.language>
+
 
 	</properties>
 	<dependencies>
@@ -86,16 +81,12 @@
         </exclusions>
         <scope>test</scope>
     </dependency>
-<dependency>
-    <groupId>org.jacoco</groupId> 
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>0.8.6</version>
-</dependency>
+
 	</dependencies>
 <distributionManagement>
    <repository>
       <id>deploymentRepo</id>
-      <url>http://4.236.128.114:8081/repository/maven-releases/</url>
+      <url>http://localhost:8081/repository/maven-releases/</url>
    </repository>
 </distributionManagement>
 	<build>
@@ -113,27 +104,7 @@
 				</configuration>
 			</plugin>
 			
-			<!--                   Jacoco Plugin                   -->
-			   <plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>${jacoco.version}</version>
-    <executions>
-        <execution>
-            <id>jacoco-initialize</id>
-            <goals>
-                <goal>prepare-agent</goal>
-            </goals>
-        </execution>
-        <execution>
-            <id>jacoco-site</id>
-            <phase>package</phase>
-            <goals>
-                <goal>report</goal>
-            </goals>
-        </execution>
-    </executions>
-</plugin>
+			
 			   			<!--                   nexus Plugin                   -->
 			   
 			   <plugin>
