--- a/pom.xml
+++ b/pom.xml
@@ -83,14 +83,20 @@
     </dependency>
 
 	</dependencies>
-<distributionManagement>
-   <repository>
-      <id>deploymentRepo</id>
-      <url>http://localhost:8081/repository/maven-releases/</url>
-   </repository>
-</distributionManagement>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>deploymentRepo</id>
+			<name>NexusRepository</name>
+			<url>http://localhost:8081/repository/maven-snapshots/</url>
+		</snapshotRepository>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>NexusRepository</name>
+			<url>http://localhost:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 	<build>
-		<plugins>
+<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -103,27 +109,21 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			
-			
-			   			<!--                   nexus Plugin                   -->
-			   
-			   <plugin>
-   <artifactId>maven-deploy-plugin</artifactId>
-   <version>2.8.1</version>
-   	  <!--  <configuration> 
-         <skip>true</skip> 
-      </configuration>  -->
-   <executions>
-      <execution>
-         <id>default-deploy</id>
-         <phase>deploy</phase>
-         <goals>
-            <goal>deploy</goal>
-         </goals>
-      </execution>
-   </executions>
-</plugin>
-
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-resources-plugin</artifactId>
+			     <version>3.1.0</version>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.19.1</version>
+			    <configuration>
+			        <includes>
+			            <include>**/*Test.java</include>
+			        </includes>
+			    </configuration>
+			</plugin>
 		</plugins>
 	</build>
 
