--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,18 @@
 			    <artifactId>maven-resources-plugin</artifactId>
 			     <version>3.1.0</version>
 			</plugin>
+			         <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>3.0.0-M3</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
 			
 		</plugins>
 	</build>
