--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 #http://localhost:8089/SpringMVC/...
 
 #Server configuration
@@ -6,7 +5,7 @@ server.servlet.context-path=/SpringMVC
 server.port=8089
 
 ### DATABASE ###
-spring.datasource.urlp=jdbc:mysql://localhost:3306/achatdb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=pass
 ### JPA / HIBERNATE ###
@@ -15,9 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #logging configuration
-logging.level.com.zaxxer.hikari=INFO
-logging.level.org.springframework=INFO 
+logging.level.com.zaxxer.hikari=warn
+logging.level.org.springframework=warn 
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
-
-
