--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   mysqldb:
     container_name: mysqldb
     image: mysql:latest
+    restart: unless-stopped
     ports:
      - 3306:3306
     environment:
@@ -12,8 +13,9 @@ services:
      - MYSQL_DATABASE=achatdb 
 
   back: 
-    image: applicationback
-    container_name: applicationback
+    image: cyrinebelguith/achat
+    container_name: achat
+    restart: on-failure
     ports:
       - 8089:8089
     depends_on:
