change pom + prop

--- a/pom.xml
+++ b/pom.xml
@@ -135,9 +135,15 @@
 			    </configuration>
 			
 			</plugin>
-
+         
 		</plugins>
 		 <finalName>achat-1.2.1-SNAPSHOT</finalName>
+		 <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+        </resource>
+    </resources>
 	</build>
 	
 
